# python-interface

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
rlbot/: __init__.py  config.py  interface.py  version.py
rlbot/flat/: __init__.py
rlbot/managers/: __init__.py  bot.py  hivemind.py  match.py  rendering.py  script.py
rlbot/utils/: __init__.py  gateway.py  logging.py  maps.py  os_detector.py
tests/: cfg_to_toml.py  default.toml  heatseeker.toml  hivemind.toml  human_vs_atba.toml  human_vs_necto.toml  hvn.toml  minimal.toml  psy.toml  read_toml.py  render_test.toml  rlbot.toml  run_forever.py  run_match.py  run_only.py  runner.py  series.toml
tests/atba/: atba.bot.toml  atba.py  atba.toml  loadout.toml
tests/fashion/: bot.py  bot.toml
tests/gamemodes/: beach_ball.toml  boomer_ball.toml  default.toml  dropshot.toml  dropshot_rumble.toml  gforce_frenzy.toml  ghost_hunt.toml  gotham_city_rumble.toml  gridiron.toml  haunted_heatseeker_2.toml  haunted_heatseeker_3.toml  heatseeker.toml  heatseeker_ricochet.toml  hoops.toml  knockout.toml  labs.toml  nike_fc_showdown.toml  rumble.toml  snowday.toml  speed_demon.toml  spike_rush.toml  spooky_cube.toml  spring_loaded.toml  super_cube.toml  tactical_rumble.toml  winter_breakaway.toml
tests/hivemind/: bot.py  bot.toml
tests/necto/: agent.py  bot.py  bot.toml  necto_obs.py  requirements.txt
tests/necto/rlgym_compat/: __init__.py  common_values.py  game_state.py  physics_object.py  (+1 more)
tests/nexto/: agent.py  bot.py  bot.toml  loadout.toml  nexto_obs.py  requirements.txt  toxic.bot.toml  toxic.py
tests/psy/: bot.toml
tests/render_fun/: render.py  render_mesh.py  script.toml
tests/render_test/: render.py  script.toml
tests/testm/: rlbot.toml
