[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlbot"
description = "A high performance Python interface for communicating with RLBot v5."
dynamic = ["version"]
requires-python = ">= 3.11"
dependencies = [
    "rlbot_flatbuffers~=0.14.1",
    "psutil==7.*",
]
readme = "README.md"
license = {text = "Unlicense"}
authors = [
    {name = "RLBot Community", email = "rlbotofficial@gmail.com" }
]
keywords = ["rocket-league"]

[project.urls]
Repository = "https://github.com/VirxEC/python-interface"

[tool.setuptools.dynamic]
version = {attr = "rlbot.version.__version__"}
